# gemseo-umdo

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .pip-tools.toml  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .ruff.toml  CHANGELOG.md  CHANGELOG.rst  CREDITS.md  CREDITS.rst  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
doc_src/examples/udoe/quadratic/: README.rst  sampling.py  sequential_sampling.py  taylor_polynomial.py
doc_src/examples/umdo/: README.rst
doc_src/examples/umdo/quadratic/: README.rst  sampling.py
doc_src/examples/umdo/rosenbrock/: README.rst  sampling.py
doc_src/examples/umdo/sellar/: README.rst  deterministic.py  first_order_taylor_polynomial.py  sampling.py  sampling_with_repetitions.py  second_order_taylor_polynomial.py
doc_src/examples/use_cases/: README.rst
doc_src/examples/visualizations/: README.rst
docs/: changelog.md  credits.md  docstring_inheritance.py  gallery_conf.py  gen_credits.py  gen_ref_pages.py  getting_started.md  index.md  licenses.md  references.bib
docs/developer_guide/: umdo.md
docs/examples/problems/: README.md
docs/examples/udoe/: README.md
docs/examples/udoe/quadratic/: README.md  (+2 more)
docs/examples/umdo/: README.md
docs/examples/visualizations/: README.md
docs/overrides/: home.html
docs/user_guide/: index.md  installation.md
docs/user_guide/statistics/: index.md  multilevel.md
docs/user_guide/umdo/: control_variate.md  index.md  pce.md  sampling.md  sequential_sampling.md  surrogate.md  taylor_polynomial.md
docs/user_guide/visualization/: index.md  sobol_graph.md  uncertain_coupling_graph.md
public/: versions.json
public/2.0.0/: 404.html  index.html
public/2.0.0/changelog/: index.html
public/2.0.0/css/: extra.css
public/2.0.0/user_guide/: index.html
public/2.0.1/: sitemap.xml
public/2.0.1/getting_started/: index.html
public/2.0.1/search/: search_index.json
public/3.0.0/: 404.html  gen_ref_nav.py  index.html  objects.inv  references.bib  sitemap.xml
public/3.0.0/changelog/: index.html
public/3.0.0/search/: search_index.json
public/4.0.0/: 404.html  gen_credits.py  references.bib  sitemap.xml
public/4.0.0/credits/: index.html
public/4.0.0/licenses/: index.html
public/4.0.0/search/: search_index.json
public/4.1.0/: credits.md.jinja  objects.inv
public/4.1.0/licenses/: index.html
public/4.1.0/search/: search_index.json
public/4.2.0/: gen_credits.py  sitemap.xml
public/4.2.0/changelog/: index.html
public/4.2.0/licenses/: index.html
public/4.2.0/search/: search_index.json
public/4.3.0/: gen_credits.py  objects.inv  sitemap.xml
public/4.3.0/changelog/: index.html
public/4.3.0/credits/: index.html
public/4.3.0/licenses/: index.html
public/4.3.0/search/: search_index.json
public/4.3.0/user_guide/: index.html
public/develop/: 404.html  index.html  objects.inv  references.bib  sitemap.xml
public/develop/changelog/: index.html
public/develop/credits/: index.html
public/develop/getting_started/: index.html
public/develop/licenses/: index.html
public/develop/search/: search_index.json
public/develop/user_guide/: index.html
requirements/: check.txt  dist.txt  doc.txt  test-constraints.in  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.13.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9.txt
src/gemseo_umdo/: __init__.py  monte_carlo_sampler.py
src/gemseo_umdo/_utils/: __init__.py
src/gemseo_umdo/disciplines/: __init__.py  additive_noiser.py  base_noiser.py  multiplicative_noiser.py  noiser_factory.py  utils.py
src/gemseo_umdo/estimators/: __init__.py  estimator.py  sampling.py  taylor_polynomial.py
src/gemseo_umdo/formulations/: __init__.py  base_sampling_settings.py  base_surrogate_settings.py  base_umdo_formulation.py  base_umdo_formulation_settings.py  control_variate.py  control_variate_settings.py  factory.py  formulation.py  pce.py  pce_settings.py  sampling.py  sampling_settings.py  sequential_sampling.py  sequential_sampling_settings.py  surrogate.py  surrogate_settings.py  taylor_polynomial.py  taylor_polynomial_settings.py
src/gemseo_umdo/problems/: __init__.py  uopt_as_umdo_scenario.py
src/gemseo_umdo/scenarios/: __init__.py  _scenario.py  base_u_scenario.py  udoe_scenario.py  umdo_scenario.py
src/gemseo_umdo/statistics/: __init__.py
src/gemseo_umdo/use_cases/: __init__.py
src/gemseo_umdo/visualizations/: __init__.py  sobol_graph.py  uncertain_coupling_graph.py
tests/: conftest.py  test_monte_carlo_sampler.py  test_scenario.py
tests/disciplines/: __init__.py  test_additive_noiser.py  test_base_noiser.py  test_multiplicative_noiser.py  test_noiser_factory.py
tests/formulations/: __init__.py  conftest.py  test_analytical_derivatives.py  test_bilevel.py  test_control_variate.py  test_factory.py  test_finite_differences.py  test_float_variables.py  test_pce.py  test_sampling.py  test_sellar.py  test_sequential_sampling.py  test_surrogate.py  test_taylor_polynomial.py  test_u_formulation.py
tests/problems/: test_uopt_as_umdo.py
tests/statistics/: conftest.py
tests/statistics/mlmc/: test_level.py  test_mlmc.py
tests/statistics/mlmc_mlcv/: test_level.py  test_mlmc_mlcv.py
tests/use_cases/beam_model/: test_advanced_uncertain_space.py  test_constraints.py  test_design_space.py  test_discipline.py  test_uncertain_space.py
tests/use_cases/heat_equation/: test_configuration.py  test_discipline.py  test_model.py  test_uncertain_space.py
tests/use_cases/spring_mass_model/: test_discipline.py  test_model.py  test_uncertain_space.py
tests/use_cases/truss/: test_bar.py  test_bars.py  test_discipline.py  test_forces.py  test_truss.py  test_uncertain_space.py
tests/visualizations/: test_sobol_graph.py  test_uncertain_coupling_graph.py
tests/visualizations/sobol_graph/: default.dot  from_analysis.dot  from_pce.dot  maximum_thickness.dot  threshold.dot
tests/visualizations/uncertain_coupling_graph/: default.dot  dispersion_measure.dot  maximum_thickness.dot  output_names.dot  self_coupled.dot
(+885 files in other folders)
