[project]
name = "gemseo-umdo"
authors = [
    {name = "Matthias De Lozzo", email = "contact@gemseo.org"}
]
description = "Robust MDO and advanced UQ with GEMSEO."
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "gemseo[all] >=6,<7",
    "matplotlib",
    "numpy",
    "scipy",
]

[dependency-groups]
dev = [
    "covdefaults >=2",
    "pytest >=7,<9",
    "pytest-cov >=5",
    "pytest-xdist >=3",
]
doc = [
    "black",
    "griffe-fieldz",
    "griffe-inherited-docstrings",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://gemseo.org"
Source = "https://gitlab.com/gemseo/dev/gemseo-umdo"
Issues = "https://gitlab.com/gemseo/dev/gemseo-umdo/-/issues"

[project.entry-points]
gemseo_plugins = { gemseo-umdo = "gemseo_umdo" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
